image resize, shadow

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2 class="subtitle">
             Mission Guatemala - Software Developer
         </h2>
-        <h3 class="body">
+        <h3 class="description">
             Developed and maintained custom medical software
         </h3>
     </div>
