update layout and sizing and divs

--- a/index.html
+++ b/index.html
@@ -12,18 +12,30 @@
 </header>
 <main id="Portfolio">
     <div class="profile">
+        <h1 class="name-header">Michael Loescher</h1>
         <img class="profile-photo" src="/smallProfile.jpg" alt="Profile photo">
+            <p class="profile-text">Full Stack Developer from Cleveland, OH</p>
     </div>
-    <div class="Work Experience">
-        <h1 class="title">
+    <div class="Professional Experience">
+        <div class="Work Experience">
+        <h2 class="name-plate">
             Work Experience
-        </h1>
-        <h2 class="subtitle">
-            Mission Guatemala - Software Developer
         </h2>
-        <h3 class="description">
-            Developed and maintained custom medical software
+        <h3 class="subtitle">
+            Mission Guatemala - Software Developer
         </h3>
+        <div class="divider"></div>
+            <div class="experience">
+                <p class="ex-description">
+                    The Mission Guatemala EHR Software supports a small
+                    clinic in rural Guatemala where it allows over
+                    10,000 underrepresented citizens access to healthcare.
+                    It is maintained as a multi-semester long senior capstone
+                    at Baldwin Wallace, where I have had the pleasure of working on it
+                    since January 2024.
+                </p>
+            </div>
+        </div>
     </div>
 </main>
 <script type="module" src="/src/main.js"></script>
