update edu and work, colors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 <header class="headline">
-    FILL WITH QUICK NAVIGATION
+  <button type="button">Experience</button>
+  <button type="button">Education</button>
+  <button type="button">Skills</button>
+  <button type="button">Contact Me</button>
 </header>
 <main id="Portfolio">
     <div class="profile">
@@ -16,13 +19,13 @@
         <img class="profile-photo" src="/smallProfile.jpg" alt="Profile photo">
             <p class="profile-text">Full Stack Developer from Cleveland, OH</p>
     </div>
-    <div class="Professional Experience">
+    <div class="work-experience-full">
         <div class="Work Experience">
         <h2 class="name-plate">
             Work Experience
         </h2>
         <h3 class="subtitle">
-            Mission Guatemala - Software Developer
+            Mission Guatemala - Software Developer/Scrum Master
         </h3>
         <div class="divider"></div>
             <div class="experience">
@@ -34,9 +37,51 @@
                     at Baldwin Wallace, where I have had the pleasure of working on it
                     since January 2024.
                 </p>
+              <ul class="ex-details">
+                <li>
+                  Develop Full-Stack REST application in C# with .NET
+                  <ul>
+                    <li>
+                      Implement multiple new "Visit Types" application-wide to
+                      allow for report separation based on admission reason
+                    </li>
+                    <li>
+                      Develop feature allowing medical staff to input mass reporting
+                      in one step, decreasing report entry time by up to 90%
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  Perform code review, documentation, and testing
+                </li>
+                <li>
+                  Serve team as Scrum Master, leading and tracking Daily Stand-ups,
+                  post-sprint Retrospectives, Work Completion Reports, and Point
+                  Allocation meetings
+                </li>
+              </ul>
             </div>
         </div>
     </div>
+  <div class="education">
+    <div class="Work Experience">
+      <h2 class="name-plate">
+        Baldwin Wallace University
+      </h2>
+      <h3 class="subtitle">
+        BS, Software Engineering
+      </h3>
+      <div class="divider"></div>
+      <div class="experience">
+        <p class="ex-description">
+          I am currently a senior Software Engineering student with a
+          minor in Mathematics and a GPA of 3.61. I am also a member of
+          Upsilon Pi Epsilon Honors Society.
+
+        </p>
+      </div>
+    </div>
+  </div>
 </main>
 <script type="module" src="/src/main.js"></script>
 </body>
