--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Resume Website</title>
+  <title>Michael Loescher | Portfolio</title>
+  <!--<link rel="icon" href="/public/smallProfile.png" type="image/x-icon" sizes="16x16" />-->
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -63,6 +64,7 @@
             </div>
         </div>
     </div>
+  <div class="divider-l"></div>
   <div class="education">
     <div class="Work Experience">
       <h2 class="name-plate">
@@ -77,7 +79,6 @@
           I am currently a senior Software Engineering student with a
           minor in Mathematics and a GPA of 3.61. I am also a member of
           Upsilon Pi Epsilon Honors Society.
-
         </p>
       </div>
     </div>
