--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <header class="headline">
-  <button type="button">Experience</button>
-  <button type="button">Education</button>
+  <button type="button" onclick="location.href='work-experience-full'">Experience</button>
+  <button type="button" onclick="location.href='education'">Education</button>
   <button type="button">Skills</button>
   <button type="button">Contact Me</button>
 </header>
@@ -64,7 +64,6 @@
             </div>
         </div>
     </div>
-  <div class="divider-l"></div>
   <div class="education">
     <div class="Work Experience">
       <h2 class="name-plate">
@@ -81,6 +80,42 @@
           Upsilon Pi Epsilon Honors Society.
         </p>
       </div>
+    </div>
+  </div>
+  <div class="projects">
+    <div class="Work Experience">
+      <h2 class="name-plate">
+        Professional Projects
+      </h2>
+      <h3 class="projectSubtitle">
+        RetroPi Emulation Console
+      </h3>
+      <ul class="projectDescription">
+        <li>
+          Engineered a Multi-Platform retro gaming console by installing and configuring RetroPie OS on a
+          Raspberry Pi 4, enabling smooth emulation across 6 classic consoles
+        </li>
+        <li>
+          Deployed a playable library of 50+ ROMs via SSH file sharing
+        </li>
+        <li>
+          Implemented bluetooth pairing to allow for wireless play with Xbox controllers
+        </li>
+      </ul>
+      <h3 class="projectSubtitle">
+        "Treasure Hunters" Video Game
+      </h3>
+      <ul class="projectDescription">
+        <li>
+          Designed and developed an interactive video game from the ground up
+          without using engines, implementing core mechanics, physics systems,
+          and custom visuals
+        </li>
+        <li>
+          Leveraged Java to create an efficient mapping system inspired by the
+          classic, Wolfenstein 3D
+        </li>
+      </ul>
     </div>
   </div>
 </main>
