attempt at function to auto scroll

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 <header class="headline">
-  <button type="button" onclick="location.href='work-experience-full'">Experience</button>
-  <button type="button" onclick="location.href='education'">Education</button>
-  <button type="button">Skills</button>
-  <button type="button">Contact Me</button>
+  <button type="button" id="experience-button">Experience</button>
+  <button type="button" id="education-button" onclick="location.href='education'">Education</button>
+  <button type="button" id="skills-button" onclick="location.href='skills'">Skills</button>
+  <button type="button" id="contact-button" onclick="location.href='contact'">Contact Me</button>
 </header>
 <main id="Portfolio">
     <div class="profile">
