--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 <header class="headline">
   <button type="button" id="experience-button">Experience</button>
-  <button type="button" id="education-button" onclick="location.href='education'">Education</button>
-  <button type="button" id="skills-button" onclick="location.href='skills'">Skills</button>
-  <button type="button" id="contact-button" onclick="location.href='contact'">Contact Me</button>
+  <button type="button" id="education-button">Education</button>
+  <button type="button" id="skills-button">Skills</button>
+  <button type="button" id="contact-button">Contact Me</button>
 </header>
 <main id="Portfolio">
     <div class="profile">
