projects button and refactor

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <header class="headline">
   <button type="button" id="experience-button">Experience</button>
   <button type="button" id="education-button">Education</button>
+  <button type="button" id="projects-button">Projects</button>
   <button type="button" id="skills-button">Skills</button>
-  <button type="button" id="contact-button">Contact Me</button>
 </header>
 <main id="Portfolio">
     <div class="profile">
