--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Michael Loescher | Portfolio</title>
-  <!--<link rel="icon" href="/public/smallProfile.png" type="image/x-icon" sizes="16x16" />-->
+  <link rel="icon" href="/smallProfile.jpg" type="image/x-icon" sizes="16x16" />
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
