Talk about UI rafactoring

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                       Develop feature allowing medical staff to input mass reporting
                       in one step, decreasing report entry time by up to 90%
                     </li>
+                      <li>
+                          Optimized UI performance by restructuring synchronous data-loading
+                          into non-blocking asynchronous processes
+                      </li>
                   </ul>
                 </li>
                 <li>
