Talk about UI rafactoring better with numbers

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                       in one step, decreasing report entry time by up to 90%
                     </li>
                       <li>
-                          Optimized UI performance by restructuring synchronous data-loading
-                          into non-blocking asynchronous processes
+                          Optimized UI performance by roughly 80% by refactoring blocking cell logic
+                          into asynchronous event handlers
                       </li>
                   </ul>
                 </li>
